--- a/video.html
+++ b/video.html
@@ -212,5 +212,31 @@
       </button>
       <p id="output">Status: Unknown</p>
     </div>
+
+    <div id="cameras">
+      <h2>Cameras</h2>
+      <button
+        class="blue-button"
+        onclick="window.open('http://10.10.20.40/live/index.html', '_blank');"
+      >
+        Camera 1
+      </button>
+      <button
+        class="blue-button"
+        onclick="window.open('http://10.10.20.41/live/index.html', '_blank');"
+      >
+        Camera 2</button
+      ><button
+        class="blue-button"
+        onclick="window.open('http://10.10.20.42/live/index.html', '_blank');"
+      >
+        Camera 3</button
+      ><button
+        class="blue-button"
+        onclick="window.open('http://10.10.20.43/live/index.html', '_blank');"
+      >
+        Camera 4
+      </button>
+    </div>
   </body>
 </html>
